--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,8 @@ body {
 background-color: rgba(236,20,54,255);
 }
 #meio {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
 }
