--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
 background-color: rgba(236,20,54,255);
 }
-.meio {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
+
+.container {
+    display: flex;
+    width: 100%;
+    height: 1%;
+    justify-content: center;
+    align-items: center;
 }
