--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,5 @@ background-color: rgba(236,20,54,255);
 }
 
 .container {
-    display: flex;
-    width: 100%;
-    height: 1%;
-    justify-content: center;
-    align-items: center;
+    top: 85%;
 }
