--- a/styles.css
+++ b/styles.css
@@ -8,4 +8,11 @@ display: block;
 margin-right: auto;
 margin-left: auto;
     }
-    
+        .testo {
+height: 200px;
+width: 200px;
+display: block;
+margin-right: auto;
+margin-left: auto;
+            color: white;
+    }
