--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
 background-color:rgb(236 20 54);
 }
@@ -9,8 +14,5 @@ margin-right: auto;
 margin-left: auto;
     }
         .testo {
-display: block;
-margin-right: auto;
-margin-left: auto;
-color: white;
+            text-aling: center;
     }
