--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,5 @@ margin-left: auto;
         .testo {
             text-aling: center;
             transform: translateX(200)
+            color: white;
     }
