--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 body {
-background-color:rgb(236 20 54);
+    height: 100vh;
+    background-color:rgb(236 20 54);
+
 }
     .container {
 height: 200px;
@@ -13,8 +15,10 @@ display: block;
 margin-right: auto;
 margin-left: auto;
     }
-        .testo {
-            text-aling: center;
-            transform: translateX(200)
-            color: white;
+
+.testo {
+display: flex;
+align-items: top;
+justify-content: center;
+color: white;
     }
