--- a/styles.css
+++ b/styles.css
@@ -21,5 +21,18 @@ display: flex;
 align-items: top;
 justify-content: center;
 color: white;
-font-family: Helvetica; 
+font-family: Helvetica;
     }
+.imagem {
+    display: flex;
+    align-items: top;
+    justify-content: left;
+}
+#roblox{
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    padding: 2px;
+    border: 2px solid black;
+    border-radius: 4px
+}
