--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ font-family: Helvetica;
     align-items: top;
     justify-content: left;
 }
-#roblox{
+.imagem {
     width: 300px;
     height: 300px;
     background-color: black;
