--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,16 @@ font-family: Helvetica;
     border: 2px solid black;
     border-radius: 4px
 }
+.imagem2{
+        display: flex;
+    align-items: top;
+    justify-content: right;
+}
+.imagem2{
+        width: 300px;
+    height: 300px;
+    background-color: black;
+    padding: 2px;
+    border: 2px solid black;
+    border-radius: 4px
+}
