--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,17 @@ font-family: Helvetica;
     border: 2px solid black;
     border-radius: 4px
 }
+.imagem {
+    display: flex;
+    align-items: top;
+    justify-content: left;
+}
+#roblox2{
+    width: 300px;
+    height: 300px;
+    background-color: black;
+    padding: 2px;
+    border: 2px solid black;
+    border-radius: 4px
+}
+
