--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ font-family: Helvetica;
     border: 2px solid black;
     border-radius: 4px
 }
-.imagem {
+.imagem2 {
     display: flex;
     align-items: top;
     justify-content: left;
