--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ font-family: Helvetica;
 }
 .imagem2 {
     display: flex;
-    align-items: top;
+    align-items: center;
     justify-content: right;
 }
 #roblox2{
