--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,13 @@ font-family: Helvetica;
     padding: 2px;
     border: 2px solid black;
     border-radius: 4px
-}
-.imagem2 {
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
+            align-items: center;
+    justify-content: left;
 #roblox2{
     width: 300px;
     height: 300px;
+        align-items: center;
+    justify-content: right;
     background-color: black;
     padding: 2px;
     border: 2px solid black;
